--- a/bin/dune
+++ b/bin/dune
@@ -1,4 +1,4 @@
 (executable
- (public_name forester_format)
+ (public_name forester-fmt)
  (name main)
  (libraries forester_format forester.frontend pretty_expressive))
