--- a/bin/dune
+++ b/bin/dune
@@ -1,4 +1,4 @@
 (executable
  (public_name forester-fmt)
  (name main)
- (libraries forester_format pretty_expressive))
+ (libraries forester_format pretty_expressive pandoc))
