add test scaffolding

--- a/test/dune
+++ b/test/dune
@@ -1,2 +1,15 @@
 (test
- (name test_forester_format))
+ (name test_forester_format)
+ (libraries forester_format dream-html))
+
+(rule
+ (with-stdout-to
+  got.tree
+  (run ./test_forester_format.exe)))
+
+(rule
+ (alias runtest)
+ (deps)
+ (targets)
+ (action
+  (diff expected.tree got.tree)))
