--- a/test/dune
+++ b/test/dune
@@ -1,19 +1,25 @@
-(executable
- (public_name test_forester_format)
- (name test_forester_format)
- (libraries forester_format pretty_expressive pandoc))
-;(test
+;(executable
+; (public_name test_forester_format)
 ; (name test_forester_format)
-; (libraries forester_format))
-;
-;(rule
-; (with-stdout-to
-;  got.tree
-;  (run ./test_forester_format.exe)))
-;
-;(rule
-; (alias runtest)
-; (deps)
-; (targets)
-; (action
-;  (diff expected.tree got.tree)))
+; (libraries forester_format pretty_expressive pandoc eio_main asai))
+
+(env
+ (dev
+  (flags
+   (:standard -w -66-32-33-27-26))))
+
+(test
+ (name test_forester_format)
+ (libraries forester_format))
+
+(rule
+ (with-stdout-to
+  got.tree
+  (run ./test_forester_format.exe)))
+
+(rule
+ (alias runtest)
+ (deps test.tree)
+ (targets)
+ (action
+  (diff test.tree got.tree)))
