--- a/forester_format.opam.template
+++ b/forester_format.opam.template
@@ -1,3 +1,3 @@
 pin-depends: [
-  ["forester.dev" "git+https://git.sr.ht/~jonsterling/ocaml-forester#8e2b7e362db593d63cce37d32cafb05160b56cb4"]
+  ["forester.dev" "git+https://git.sr.ht/~jonsterling/ocaml-forester"]
 ]
