--- a/lib/dune
+++ b/lib/dune
@@ -3,7 +3,7 @@
  (modules forester_format pandoc_filter)
  (libraries pandoc forester.frontend forester.core pretty_expressive))
 
-(env
- (dev
-  (flags
-   (:standard -w -66-32-33-27-26))))
+;(env
+; (dev
+;  (flags
+;   (:standard -w -66-32-33-27-26))))
